[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/ships/cruiser/prop.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/ships/bomber/bridge.png" type="Texture" id=2]
[ext_resource path="res://scene/ships/cruiser/baloon.png" type="Texture" id=3]
[ext_resource path="res://scene/ships/bomber/bomber.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/bar-3d/hp_bar_3d.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/highlight/highlight.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/ships/cruiser/sail.png" type="Texture" id=9]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.392489, 0.614795, 1.91847 )

[node name="bomber" type="KinematicBody"]
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00332022, 0 )
shape = SubResource( 3 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="body_1" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.50437e-10, 0, 0.289695 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="body_2" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="body_3" type="Sprite3D" parent="pivot"]
transform = Transform( 1.4, 0, 0, 0, 2, 0, 0, 0, 1, -1.11264e-08, -0.29936, -0.0454581 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="sail_1" type="Sprite3D" parent="pivot"]
transform = Transform( -0.499829, 0.000684563, 0.0260459, 0.0116241, 0.24973, 0.866026, -0.00591157, 0.433168, -0.499321, -0.421357, -0.778306, -1.13564 )
flip_h = true
alpha_cut = 2
texture = ExtResource( 9 )

[node name="sail_2" type="Sprite3D" parent="pivot"]
transform = Transform( -0.49993, 0.00436505, 0.0141877, -0.00396173, 0.249969, -0.866026, -0.00732671, -0.433009, -0.499799, -0.447969, -0.689796, 1.12663 )
flip_h = true
alpha_cut = 2
texture = ExtResource( 9 )

[node name="bridge_1" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.63329e-08, 0, 0.602426 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="bridge_2" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.72605e-08, 0, -0.623647 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="prop_2" parent="pivot" instance=ExtResource( 1 )]
transform = Transform( 1.31134e-07, 0.999999, 4.37114e-08, 3.82136e-15, 4.37113e-08, -0.999999, -0.999999, 1.31134e-07, 1.91068e-15, -0.00911055, 0.127484, -1.0735 )

[node name="prop_3" parent="pivot" instance=ExtResource( 1 )]
transform = Transform( 1.31134e-07, 0.999999, 4.37114e-08, 3.82136e-15, 4.37113e-08, -0.999999, -0.999998, 1.31134e-07, 1.91068e-15, 0.00743525, 0.127, 1.11332 )

[node name="Tween" type="Tween" parent="."]

[node name="hpBar" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="highlight" parent="." instance=ExtResource( 8 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
